#1954 safari overflow bug and other random warning squashing

--- a/core/dslmcode/shared/drupal-7.x/themes/elmsln_contrib/foundation_access/css/tweaks.css
+++ b/core/dslmcode/shared/drupal-7.x/themes/elmsln_contrib/foundation_access/css/tweaks.css
@@ -47,6 +47,7 @@ body.page-node-edit.node-type-page .cke_focus .cke_top{
 .r-header {
   padding: 0;
   margin: 1rem 0 0 0;
+  overflow-x: hidden;
 }
 
 .r-header.pinned {
